--- a/3种notification 通知/src/main/res/layout/activity_main.xml
+++ b/3种notification 通知/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/darker_gray"
@@ -65,12 +66,18 @@
                 android:background="@mipmap/ic_launcher"
                 />
 
-            <RadioButton
+            <xl.gcs.com.mynotification.MyRadioButton
                 android:id="@+id/rb_private"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="private"
-                android:textColor="@drawable/bg_radio_group"/>
+                android:textColor="@drawable/bg_radio_group"
+                android:drawablePadding="40dp"
+                android:button="@null"
+                android:gravity="center"
+                app:drawableBottom="@mipmap/ic_launcher"
+                app:drawableSizes="30dp"
+                />
 
             <RadioButton
                 android:id="@+id/rb_secret"
