--- a/17 网络请求/src/main/res/layout/activity_retrofit.xml
+++ b/17 网络请求/src/main/res/layout/activity_retrofit.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_conversion"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".TransformActivity">
+    tools:context=".retrofit.RetrofitActivity">
 
+    <Button
+        android:id="@+id/bt_request"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_centerInParent="true"
+        android:text="请求网络"
+        android:gravity="center"
+        android:background="@android:color/darker_gray"/>
 </RelativeLayout>
